@@ -1278,11 +1278,13 @@ sub do_connlimit( $ ) {
 
     return '' unless $limit and $limit ne '-';
 
+    require_capability 'CONNLIMIT_MATCH', 'A non-empty CONNLIMIT', 's';  
+
     my $invert =  $limit =~ s/^!// ? '' : '! '; # Note Carefully -- we actually do 'connlimit-at-or-below'
 
     if ( $limit =~ /^(\d+):(\d+)$/ ) {
 	fatal_error "Invalid Mask ($2)" unless $2 > 0 || $2 < 31;
-	"-m connlimit ${invert}--connlimit-above $1 --connmask $2";
+	"-m connlimit ${invert}--connlimit-above $1 --connlimit-mask $2 ";
     } elsif ( $limit =~ /^(\d+)$/ )  {
 	"-m connlimit ${invert}--connlimit-above $limit ";
     } else {
