@@ -239,8 +239,8 @@
       </varlistentry>
 
       <varlistentry>
-        <term><emphasis role="bold">CONNLIMIT</emphasis> - [<emphasis
-        role="bold">!</emphasis>]<emphasis>limit</emphasis>[:<emphasis>mask</emphasis>]</term>
+        <term><emphasis role="bold">CONNLIMIT</emphasis> -
+        <emphasis>limit</emphasis>[:<emphasis>mask</emphasis>]</term>
 
         <listitem>
           <para>Added in Shorewall-perl 4.2.1. May be used to limit the number
@@ -254,10 +254,7 @@
           <replaceable>mask</replaceable> specifies the width of a VLSM mask
           to be applied to the source address; the number of current
           connections is then taken over all hosts in the subnet
-          <replaceable>source-address</replaceable>/<replaceable>mask</replaceable>.
-          When<option> !</option> is specified, the rule matches when the
-          number of connection exceeds the
-          <replaceable>limit</replaceable>.</para>
+          <replaceable>source-address</replaceable>/<replaceable>mask</replaceable>.</para>
         </listitem>
       </varlistentry>
     </variablelist>
