@@ -123,7 +123,12 @@ Other changes in Shorewall 4.2.1
     It is important to note that while the limit is only checked for
     those destinations specified in the DEST column, the number of
     current connections is calculated over all destinations and not
-    just the destination specified in the DEST column. 
+    just the destination specified in the DEST column.
+
+    Use of this feature requires the connlimit match capability in your
+    kernel and iptables. If you use a capabilities file when compiling
+    your Shorewall configuration(s), then you need to regenerate the
+    file using Shorewall or Shorewall-lite 4.2.1.
 
 New Features in Shorewall 4.2.
 
